@@ -1,3 +1,9 @@
+2007-05-03 Chris Kelly <ckdake@ckdake.com> 1.5.7-svn-b1
+
+ * Fix: Little Typo
+
+ * Change: use @ before mkdir in platform/*
+
 2007-04-03 Chris Kelly <ckdake@ckdake.com> 1.5.6
 
  * Release: 1.5.6
